@@ -1,6 +1,7 @@
 jgit (2.3.1-1) UNRELEASED; urgency=low
 
   * New Upstream release.
+  * Refreshed debian-custom-build.patch.
 
  -- Jakub Adam <jakub.adam@ktknet.cz>  Fri, 22 Feb 2013 16:47:29 +0100
 
